--- a/Styles/index.css
+++ b/Styles/index.css
@@ -87,7 +87,6 @@ a:visited {
   height: 100%;
   width: 100%;
   position: relative;
-  background-color: var(--color-black);
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -100,7 +99,7 @@ a:visited {
   width: 100%;
   background-image: url("../imagenes/fondo.svg");
   position: absolute;
-  background-color: var
+  background-color: var(--color-black);
 }
 
 .banner-content {
@@ -239,6 +238,7 @@ a > button:hover {
 
 a {
   text-decoration: none;
+  color: var(--color-white);
 }
 
 .button-skills:hover {
